plugins {
    id 'java'
}

group 'org.codingdojo.kata'
version '1.0-SNAPSHOT'

sourceCompatibility = 16

repositories {
    mavenCentral()
}

dependencies {
    implementation group: 'com.google.guava', name: 'guava', version: '28.1-jre'
    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter', version: '5.5.2'
    testImplementation group: 'org.assertj', name: 'assertj-core', version: '3.14.0'
}

test() {
    useJUnitPlatform()
}

wrapper {
    gradleVersion = '6.0.1'
}
targetCompatibility = JavaVersion.VERSION_16
